<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <name>IRSA Tools</name>
    <artifactId>irsatools</artifactId>
    <groupId>com.irsatools</groupId>
    <version>0.0.1</version>
    <packaging>pom</packaging>

    <!-- Modules -->
    <modules>
        <module>irsa-data/domain-model</module>
        <module>irsa-data/jpa-data-provider</module>
        <module>irsa-web</module>
        <module>irsa-distribution</module>
        <module>data-import</module>
    </modules>

    <!-- Properties -->
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>1.6</java.version>
        <skipTests>true</skipTests>
        <!-- Plugins version -->
        <maven-processor-plugin.version>2.0.4</maven-processor-plugin.version>
        <build-helper-maven-plugin.version>1.5</build-helper-maven-plugin.version>
        <maven-surefire-plugin.version>2.12</maven-surefire-plugin.version>
        <properties-maven-plugin.version>1.0-alpha-2</properties-maven-plugin.version>
        <maven-compiler-plugin.version>2.3.1</maven-compiler-plugin.version>
        <sql-maven-plugin.version>1.5</sql-maven-plugin.version>
        <!-- Dependencies version -->
        <postgresql-jdbc-driver>9.0-801.jdbc4</postgresql-jdbc-driver>
        <spring.version>3.1.1.RELEASE</spring.version>
        <slf4j.version>1.6.4</slf4j.version>
        <log4j.version>1.2.15</log4j.version>
        <junit.version>4.8.2</junit.version>
    </properties>

    <repositories>
        <repository>
            <id>EclipseLink Repo</id>
            <url>http://www.eclipse.org/downloads/download.php?r=1&amp;nf=1&amp;file=/rt/eclipselink/maven.repo/</url>
        </repository>
    </repositories>

    <dependencyManagement>
        <dependencies>
            <!-- DB Dependencies -->
            <dependency>
                <groupId>postgresql</groupId>
                <artifactId>postgresql</artifactId>
                <version>${postgresql-jdbc-driver}</version>
            </dependency>
            <!-- Test Dependencies -->
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>${junit.version}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <inherited>true</inherited>
                    <configuration>
                        <source>${java.version}</source>
                        <target>${java.version}</target>
                        <optimize>true</optimize>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${maven-surefire-plugin.version}</version>
                    <configuration>
                        <skip>${skipTests}</skip>
                        <argLine>-Xmx256m -XX:MaxPermSize=256m</argLine>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>properties-maven-plugin</artifactId>
                    <version>${properties-maven-plugin.version}</version>
                    <executions>
                        <execution>
                            <phase>initialize</phase>
                            <goals>
                                <goal>read-project-properties</goal>
                            </goals>
                            <configuration>
                                <files>
                                    <file>${project.basedir}/build.properties</file>
                                    <file>${project.basedir}/build.${user.name}.properties</file>
                                </files>
                                <quiet>true</quiet>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>

